--- a/Codename CHOMPS/iPhoneMainStoryboard.storyboard
+++ b/Codename CHOMPS/iPhoneMainStoryboard.storyboard
@@ -63,13 +63,14 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdx-hh-aub">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdx-hh-aub">
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="96" id="YkS-et-2Lu"/>
+                                    <constraint firstAttribute="height" constant="97" id="rTP-su-7aT"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Done">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -79,15 +80,28 @@
                                     <action selector="isDoneTakingPictures:" destination="oCM-Dw-4p0" eventType="touchUpInside" id="XG3-dJ-MN5"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="WCM-dh-a3f"/>
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Loading" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h3X-NL-bCD">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="h3X-NL-bCD" firstAttribute="centerX" secondItem="WCM-dh-a3f" secondAttribute="centerX" type="default" id="6Qc-vp-zkb"/>
                             <constraint firstItem="cdx-hh-aub" firstAttribute="bottom" secondItem="FHx-3o-f5p" secondAttribute="bottom" type="default" id="7bX-6d-S9w"/>
+                            <constraint firstItem="h3X-NL-bCD" firstAttribute="centerX" secondItem="cdx-hh-aub" secondAttribute="centerX" type="default" id="Bh4-z7-9aN"/>
+                            <constraint firstItem="WCM-dh-a3f" firstAttribute="top" secondItem="FHx-3o-f5p" secondAttribute="top" constant="125" id="I8e-t7-Dgm"/>
                             <constraint firstItem="cdx-hh-aub" firstAttribute="leading" secondItem="FHx-3o-f5p" secondAttribute="leading" type="default" id="S5F-IW-DqB"/>
+                            <constraint firstItem="h3X-NL-bCD" firstAttribute="top" secondItem="WCM-dh-a3f" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="sBt-jX-e5f"/>
                             <constraint firstItem="cdx-hh-aub" firstAttribute="trailing" secondItem="FHx-3o-f5p" secondAttribute="trailing" type="default" id="seH-EZ-VOO"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="TaL-V2-Axf"/>
                     <connections>
+                        <outlet property="doneButton" destination="cdx-hh-aub" id="U38-Pp-DfN"/>
+                        <outlet property="loadingActivity" destination="WCM-dh-a3f" id="Q5O-x8-oHp"/>
+                        <outlet property="loadingText" destination="h3X-NL-bCD" id="eAa-Fj-OXS"/>
                         <segue destination="7vR-K8-0ug" kind="modal" identifier="toImagePicker" id="H6r-FD-OTH"/>
                     </connections>
                 </viewController>
@@ -100,7 +114,7 @@
             <objects>
                 <collectionViewController autoresizesArchivedViewToFullSize="NO" id="7vR-K8-0ug" customClass="ImagePickerController" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="xMz-eh-Bon">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cXC-CK-4pS">
                             <size key="itemSize" width="90" height="90"/>
@@ -124,6 +138,8 @@
                             <outlet property="delegate" destination="7vR-K8-0ug" id="IUj-qn-DTG"/>
                         </connections>
                     </collectionView>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageCollectionView" destination="xMz-eh-Bon" id="Ljc-3a-jBw"/>
                     </connections>
@@ -153,6 +169,8 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CameraViewController.h"/>
             <relationships>
                 <relationship kind="action" name="isDoneTakingPictures:"/>
+                <relationship kind="outlet" name="loadingActivity" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="loadingText" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="HomeViewController" superclassName="UITableViewController">
